############################# Top Level Makefile.am ############################

## Do not delete this file!

## Use "automake" to generate Makefile.in

AUTOMAKE_OPTIONS= 1.11

SUBDIRS= Documents SourceCode Schemos etc

man1_MANS= NetworkDesigner.1

EXTRA_DIST= $(man1_MANS) fox-1.6.50.tar.gz fox-1.6.50.tar.gz.md5 m4

############################# Top Level Makefile.am ############################
