############################## Schemos Makefile.am  ############################

## Do not delete!

## Use automake to generate new Makefile.in's

Schemosdir= $(prefix)/$(PACKAGE)-$(VERSION)/Schemos

GIF_Images= CapacitorDivider.gif \
FreeMe.gif \
HiZ-LNet-1.gif \
HiZ-LNet-2.gif \
LoZ-LNet-1.gif \
LoZ-LNet-2.gif \
NandFWelcomeScreen.gif \
Pi-Network.gif \
Series-C.gif \
Shunt-C.gif \
T-Network.gif

EXTRA_DIST= $(GIF_Images)

Schemos_DATA= $(GIF_Images)

############################## Schemos Makefile.am  ############################
