############################# SourceCode Makefile.am ###########################

bin_PROGRAMS= NetworkDesigner

NetworkDesigner_LDADD= $(FoxLibs)

NetworkDesigner_SOURCES= \
NetworkDesigner.cpp \
about.cpp about.h \
icons.cpp icons.h \
mainwindow.cpp mainwindow.h \
netdesign.cpp netdesign.h \
splmsgbox.cpp splmsgbox.h \
defs.h \
locations.h \
freedolphins.h \
messages.h

############################# SourceCode Makefile.am ###########################
