################################ etc Makefile.am  ##############################

## Do not delete!

## Use automake to generate new Makefile.in's

etcdir= $(prefix)/$(PACKAGE)-$(VERSION)/etc

Config= browserpaths.cfg

EXTRA_DIST= $(Config)

etc_DATA= $(Config)

################################ etc Makefile.am  ##############################
